# heckbot

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE.md  README.md  bot.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: FUNDING.yml
.github/workflows/: deploy.yml  tests.yml  update-ec2.yml
heckbot/adapter/: config_adapter.py  message_table_adapter.py  reaction_table_adapter.py  sqlite_adaptor.py
heckbot/cogs/: config.py  events.py  message.py  picker.py  poll.py  react.py  roles.py
heckbot/utils/: chatutils.py
resources/config/: config.json  default_config.json
src/adaptor/: config_json_adaptor.py  dynamo_table_adaptor.py
src/cogs/: ai.py  config.py  events.py  gif.py  imagegeneration.py  message.py  moderation.py  poll.py  react.py  reactmatch.py  sfx.py
src/handler/: association_handler.py
src/heckbot/: settings.py
src/heckbot/adapter/: config_adapter.py  message_table_adapter.py  reaction_table_adapter.py  sqlite_adaptor.py
src/heckbot/adaptor/: config_adaptor.py  config_json_adaptor.py  dynamo_table_adaptor.py  reaction_table_adaptor.py  task_table_adaptor.py
src/heckbot/cogs/: config.py  events.py  gif.py  message.py  moderation.py  picker.py  poll.py  react.py  roles.py
src/heckbot/db/: schema.sql
src/heckbot/extensions/: poll.py
src/heckbot/service/: config_service.py  react_service.py  roll_service.py  task_service.py
src/heckbot/types/: constants.py  types.py  typevars.py
src/heckbot/utils/: auth.py  utils.py
src/service/: association_service.py  config_service.py  react_service.py  roll_service.py
src/types/: constants.py  typevars.py
src/utils/: chatutils.py
tests/: conftest.py
tests/integration/: test_dpytest.py
tests/unit/: test_dynamo_table_adaptor.py
