[project]
name = "heckbot"
description = "For-fun Discord bot"
dynamic = ["version", "dependencies"]
authors = [
    { name = "Julian Espada", email = "jesp1999@gmail.com" }
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=heckbot"
testpaths = [
    "tests",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
