[project]
name = "heckbot"
description = "For-fun Discord bot"
dynamic = ["version", "dependencies", "optional-dependencies"]
license = {file = "LICENSE.md"}
requires-python = ">=3.7"
readme = "README.md"
keywords = ["discord", "bot"]
authors = [
  {name = "Julian Espada"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Discord Users",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {testing = {file = ["requirements_dev.txt"]}}

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=heckbot"
testpaths = [
    "tests",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
