[project]
name = "heckbot"
version = "0.1.0"
description = "A silly Discord bot for my personal server with my friends"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE.md"]
keywords = ["discord", "bot"]
dynamic = ["dependencies", "optional-dependencies"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Discord Users",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
homepage = "https://github.com/jesp1999/heckbot"
source = "https://github.com/jesp1999/heckbot"
issues = "https://github.com/jesp1999/heckbot/issues"

[project.authors]
name = "Julian Espada"

[tool.pytest.ini_options]
addopts = "--cov=heckbot"
testpaths = [
    "tests",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
