[metadata]
name = Heckbot
description = Discord bot
long_description = file: README.md
long_description_content_type = text/markdown
author = Julian Espada
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    heckbot
install_requires =
    aiohttp>=3
    boto3>=1
    boto3-stubs[essential]>=1
    colorama>=0.4
    discord>=2.1.0
    dpytest>=0.6
    pynacl>=1.5
    pytest>=7
    pytest-asyncio>=0.20
    python-dotenv>=0.20
    table2ascii>=1
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=5
    mypy>=0.950
    pytest>=7
    pytest-asyncio>=0.20
    pytest-cov>=3
    tox>=4

[options.package_data]
heckbot = py.typed

[flake8]
max-line-length = 100
exclude =
    venv
    .tox
